// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typescript codeGeneration fragment spreads with inline fragments 1`] = `
Object {
  "__generated__/HeroName.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export interface HeroName_hero_Human_friends_Human {
  __typename: \\"Human\\";
  name: string;  // What this human calls themselves
}

export interface HeroName_hero_Human_friends_Droid {
  __typename: \\"Droid\\";
  id: string;  // The ID of the droid
}

export type HeroName_hero_Human_friends = HeroName_hero_Human_friends_Human | HeroName_hero_Human_friends_Droid;

export interface HeroName_hero_Human {
  __typename: \\"Human\\";
  name: string;                                            // What this human calls themselves
  id: string;                                              // The ID of the human
  homePlanet: string | null;                               // The home planet of the human, or null if unknown
  friends: (HeroName_hero_Human_friends | null)[] | null;  // This human's friends, or an empty list if they have none
}

export interface HeroName_hero_Droid {
  __typename: \\"Droid\\";
  name: string;                   // What others call this droid
  id: string;                     // The ID of the droid
  appearsIn: (Episode | null)[];  // The movies this droid appears in
}

export type HeroName_hero = HeroName_hero_Human | HeroName_hero_Droid;

export interface HeroName {
  hero: HeroName_hero | null;
}

export interface HeroNameVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/droidFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: droidFragment
// ====================================================

export interface droidFragment {
  __typename: \\"Droid\\";
  appearsIn: (Episode | null)[];  // The movies this droid appears in
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/humanFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: humanFragment
// ====================================================

export interface humanFragment_friends_Human {
  __typename: \\"Human\\";
  name: string;  // What this human calls themselves
}

export interface humanFragment_friends_Droid {
  __typename: \\"Droid\\";
  id: string;  // The ID of the droid
}

export type humanFragment_friends = humanFragment_friends_Human | humanFragment_friends_Droid;

export interface humanFragment {
  __typename: \\"Human\\";
  homePlanet: string | null;                         // The home planet of the human, or null if unknown
  friends: (humanFragment_friends | null)[] | null;  // This human's friends, or an empty list if they have none
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration fragment with fragment spreads 1`] = `
Object {
  "__generated__/anotherFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export interface anotherFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  id: string;    // The ID of the character
  name: string;  // The name of the character
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export interface simpleFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration fragment with fragment spreads with inline fragment 1`] = `
Object {
  "__generated__/anotherFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: anotherFragment
// ====================================================

export interface anotherFragment_Droid {
  __typename: \\"Droid\\";
  id: string;    // The ID of the droid
  name: string;  // What others call this droid
}

export interface anotherFragment_Human {
  __typename: \\"Human\\";
  id: string;                     // The ID of the human
  name: string;                   // What this human calls themselves
  appearsIn: (Episode | null)[];  // The movies this human appears in
}

export type anotherFragment = anotherFragment_Droid | anotherFragment_Human;

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export interface simpleFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration handles multiline graphql comments 1`] = `
Object {
  "__generated__/CustomScalar.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: CustomScalar
// ====================================================

export interface CustomScalar_commentTest {
  __typename: \\"CommentTest\\";
  multiLine: string | null;  // This is a multi-line comment.
}

export interface CustomScalar {
  commentTest: CustomScalar_commentTest | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration inline fragment 1`] = `
Object {
  "__generated__/HeroInlineFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroInlineFragment
// ====================================================

export interface HeroInlineFragment_hero {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
  id: string;    // The ID of the character
}

export interface HeroInlineFragment {
  hero: HeroInlineFragment_hero | null;
}

export interface HeroInlineFragmentVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration inline fragment on type conditions 1`] = `
Object {
  "__generated__/HeroName.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export interface HeroName_hero_Human_friends {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

export interface HeroName_hero_Human {
  __typename: \\"Human\\";
  name: string;                                            // What this human calls themselves
  id: string;                                              // The ID of the human
  homePlanet: string | null;                               // The home planet of the human, or null if unknown
  friends: (HeroName_hero_Human_friends | null)[] | null;  // This human's friends, or an empty list if they have none
}

export interface HeroName_hero_Droid {
  __typename: \\"Droid\\";
  name: string;                   // What others call this droid
  id: string;                     // The ID of the droid
  appearsIn: (Episode | null)[];  // The movies this droid appears in
}

export type HeroName_hero = HeroName_hero_Human | HeroName_hero_Droid;

export interface HeroName {
  hero: HeroName_hero | null;
}

export interface HeroNameVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration inline fragment on type conditions with differing inner fields 1`] = `
Object {
  "__generated__/HeroName.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export interface HeroName_hero_Human_friends {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

export interface HeroName_hero_Human {
  __typename: \\"Human\\";
  name: string;                                            // What this human calls themselves
  id: string;                                              // The ID of the human
  homePlanet: string | null;                               // The home planet of the human, or null if unknown
  friends: (HeroName_hero_Human_friends | null)[] | null;  // This human's friends, or an empty list if they have none
}

export interface HeroName_hero_Droid_friends {
  __typename: \\"Human\\" | \\"Droid\\";
  id: string;  // The ID of the character
}

export interface HeroName_hero_Droid {
  __typename: \\"Droid\\";
  name: string;                                            // What others call this droid
  id: string;                                              // The ID of the droid
  appearsIn: (Episode | null)[];                           // The movies this droid appears in
  friends: (HeroName_hero_Droid_friends | null)[] | null;  // This droid's friends, or an empty list if they have none
}

export type HeroName_hero = HeroName_hero_Human | HeroName_hero_Droid;

export interface HeroName {
  hero: HeroName_hero | null;
}

export interface HeroNameVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration multiple files 1`] = `"/some/file/__generated__/HeroName.ts"`;

exports[`Typescript codeGeneration multiple files 2`] = `
TypescriptGeneratedFile {
  "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export interface HeroName_hero {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
  id: string;    // The ID of the character
}

export interface HeroName {
  hero: HeroName_hero | null;
}

export interface HeroNameVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

// The input object sent when someone is creating a new review
interface ReviewInput {
  stars: number;
  commentary?: string | null;
  favorite_color?: ColorInput | null;
}

// The input object sent when passing in a color
interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Typescript codeGeneration multiple files 3`] = `"/some/file/__generated__/SomeOther.ts"`;

exports[`Typescript codeGeneration multiple files 4`] = `
TypescriptGeneratedFile {
  "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: SomeOther
// ====================================================

export interface SomeOther_hero {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;                   // The name of the character
  appearsIn: (Episode | null)[];  // The movies this character appears in
}

export interface SomeOther {
  hero: SomeOther_hero | null;
}

export interface SomeOtherVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

// The input object sent when someone is creating a new review
interface ReviewInput {
  stars: number;
  commentary?: string | null;
  favorite_color?: ColorInput | null;
}

// The input object sent when passing in a color
interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Typescript codeGeneration multiple files 5`] = `"__generated__/ReviewMovie.ts"`;

exports[`Typescript codeGeneration multiple files 6`] = `
TypescriptGeneratedFile {
  "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export interface ReviewMovie_createReview {
  __typename: \\"Review\\";
  stars: number;              // The number of stars this review gave, 1-5
  commentary: string | null;  // Comment about the movie
}

export interface ReviewMovie {
  createReview: ReviewMovie_createReview | null;
}

export interface ReviewMovieVariables {
  episode?: Episode | null;
  review?: ReviewInput | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

// The input object sent when someone is creating a new review
interface ReviewInput {
  stars: number;
  commentary?: string | null;
  favorite_color?: ColorInput | null;
}

// The input object sent when passing in a color
interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Typescript codeGeneration multiple files 7`] = `"/some/file/__generated__/someFragment.ts"`;

exports[`Typescript codeGeneration multiple files 8`] = `
TypescriptGeneratedFile {
  "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: someFragment
// ====================================================

export interface someFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  appearsIn: (Episode | null)[];  // The movies this character appears in
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

// The input object sent when someone is creating a new review
interface ReviewInput {
  stars: number;
  commentary?: string | null;
  favorite_color?: ColorInput | null;
}

// The input object sent when passing in a color
interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
}
`;

exports[`Typescript codeGeneration query with fragment spreads 1`] = `
Object {
  "__generated__/HeroFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroFragment
// ====================================================

export interface HeroFragment_hero {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
  id: string;    // The ID of the character
}

export interface HeroFragment {
  hero: HeroFragment_hero | null;
}

export interface HeroFragmentVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
  "__generated__/simpleFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: simpleFragment
// ====================================================

export interface simpleFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration simple fragment 1`] = `
Object {
  "__generated__/SimpleFragment.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL fragment: SimpleFragment
// ====================================================

export interface SimpleFragment {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration simple hero query 1`] = `
Object {
  "__generated__/HeroName.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL query operation: HeroName
// ====================================================

export interface HeroName_hero {
  __typename: \\"Human\\" | \\"Droid\\";
  name: string;  // The name of the character
  id: string;    // The ID of the character
}

export interface HeroName {
  hero: HeroName_hero | null;
}

export interface HeroNameVariables {
  episode?: Episode | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;

exports[`Typescript codeGeneration simple mutation 1`] = `
Object {
  "__generated__/ReviewMovie.ts": TypescriptGeneratedFile {
    "fileContents": "

/* tslint:disable */
// This file was automatically generated and should not be edited.

// ====================================================
// GraphQL mutation operation: ReviewMovie
// ====================================================

export interface ReviewMovie_createReview {
  __typename: \\"Review\\";
  stars: number;              // The number of stars this review gave, 1-5
  commentary: string | null;  // Comment about the movie
}

export interface ReviewMovie {
  createReview: ReviewMovie_createReview | null;
}

export interface ReviewMovieVariables {
  episode?: Episode | null;
  review?: ReviewInput | null;
}

//==============================================================
// START Enums and Input Objects
// All enums and input objects are included in every output file
// for now, but this will be changed soon.
// TODO: Link to issue to fix this.
//==============================================================

// The episodes in the Star Wars trilogy
export enum Episode {
  EMPIRE = \\"EMPIRE\\",
  JEDI = \\"JEDI\\",
  NEWHOPE = \\"NEWHOPE\\",
}

// The input object sent when someone is creating a new review
interface ReviewInput {
  stars: number;
  commentary?: string | null;
  favorite_color?: ColorInput | null;
}

// The input object sent when passing in a color
interface ColorInput {
  red: number;
  green: number;
  blue: number;
}

//==============================================================
// END Enums and Input Objects
//==============================================================",
  },
}
`;
